fixed hover color mismatch on mobile hamburger menu

--- a/client/css/custom-styles.css
+++ b/client/css/custom-styles.css
@@ -358,6 +358,12 @@ ul.is-invalid {
   }
 }
 
+/* Change menu button hover color */
+
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+  background-color: #006298;
+}
+
 /* Style top nav */
 
 .navbar-inverse {
